# k_k-chat-linuxAI

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
boot/grub/: grub.cfg
k_K/: .gitignore  Cargo.toml
k_K/src/: config.rs  evdev_input.rs  fbdev.rs  handwriting.rs  hwr_engine.rs  main.rs  network.rs  ui.rs
rootfs/: init
scripts/: build_all.sh  build_busybox.sh  build_images.sh  build_initramfs.sh  build_kernel.sh  fetch_unifont.sh
src/: config.rs  handwriting.rs  main.rs
