[package]
name = "kk_chat"
version = "1.0.0"
edition = "2021"
description = "k_K Chat Terminal - A lightweight offline AI chat client with handwriting input for Linux framebuffer"
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
libc = "=0.2.150"